# scrapli

./: .gitignore  .pylintrc  404.html  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  codecov.yaml  docker-compose.yaml  index.html  known_words.txt  main.py  mkdocs.yml  noxfile.py  pyproject.toml  requirements-asyncssh.txt  requirements-community.txt  requirements-dev.txt  requirements-docs.txt  requirements-genie.txt  requirements-paramiko.txt  requirements-ssh2.txt  requirements-textfsm.txt  requirements-ttp.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.clab/: .topo.ci.amd64.yaml.bak  topo.amd64.yaml  topo.arm64.yaml  topo.ci.amd64.yaml  topo.ci.arm64.yaml  topo.yaml
.clab/clab-libscrapli/: ansible-inventory.yml  nornir-simple-inventory.yml  topology-data.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  vars.env
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cicd.yaml  commit.yaml  debug.yaml  docs.yaml  libscrapli.yaml  lint.yaml  pre_release.yaml  publish.yaml  release.yaml  test.yaml  validate.yaml  weekly.yaml
community/: index.html
details/: index.html
docs/: PUBLIC_API_STATUS.md  THANK_YOU.md  changelog.md  community.md  details.md  generate.py  htmltest.yml  index.md  installation.md  migration.md  public_api_status.md
docs/about/: code_of_conduct.md  contributing.md  thank_you.md
docs/api_docs/: decorators.md  exceptions.md  factory.md  helper.md  logging.md  response.md  ssh_config.md
docs/examples/: go.md  python.md  zig.md
docs/generate/: generate_docs.py  mkdocs_markdown.mako
docs/more_scrapli/: nornir_scrapli.md  scrapli_cfg.md  scrapli_community.md  scrapli_netconf.md  scrapli_replay.md  scrapli_scp.md  scrapli_stubs.md
docs/nssh/: decorators.html  exceptions.html  helper.html  index.html  netmiko_compatability.html  response.html  result.html
docs/reference/: SUMMARY.md  decorators.md  exceptions.md  factory.md  helper.md  logging.md  response.md  settings.md  ssh_config.md
docs/scrapli/: decorators.html  exceptions.html  factory.html  helper.html  index.html  netmiko_compatability.html  response.html  ssh_config.html
docs/user_guide/: advanced_usage.md  basic_usage.md  faq.md  installation.md  linting_testing.md  project_details.md  quickstart.md  versioning.md
examples/: README.md  test_examples.py
examples/async_usage/: async_iosxe_driver.py  async_multiple_connections.py
examples/banners_macros_etc/: iosxe_banners_macros_etc.py
examples/basic_usage/: factory.py  generic_driver.py  iosxe_driver.py  nssh_driver.py  scrapli_driver.py
examples/commandeer/: commandeer_generic_connection.py
examples/configuration_modes/: eos_configure_session.py  iosxr_configure_exclusive.py
examples/go/: index.html
examples/logging/: basic_logging.py  opinionated_logging.py  specific_host_logging.py
examples/non_core_device/: wlc.py
examples/python/: index.html
examples/read_callback/: async_read_callback.py  sync_read_callback.py
examples/ssh_config_files/: ssh_config  ssh_config_file.py
examples/ssh_keys/: scrapli_key_w-pw  scrapli_key_w-pw.pub  ssh_keys.py  ssh_keys__with_pw.py
examples/structured_data/: structured_data_genie.py  structured_data_textfsm.py
examples/transport_options/: system_ssh_args.py
examples/zig/: index.html
installation/: index.html
migration/: index.html
nssh/: __init__.py  decorators.py  exceptions.py  helper.py  netmiko_compatability.py  response.py  result.py
nssh/channel/: __init__.py  channel.py
nssh/driver/: __init__.py  driver.py  network_driver.py
nssh/transport/: __init__.py  cssh2.py  miko.py  ptyprocess.py  socket.py  systemssh.py  transport.py
scrapli/: __init__.py  auth.py  cli.py  cli_decorators.py  cli_parse.py  cli_result.py  decorators.py  exceptions.py  factory.py  ffi.py  ffi_mapping.py  ffi_mapping_cli.py  ffi_mapping_netconf.py  ffi_mapping_options.py  ffi_options.py  ffi_types.py  helper.py  logging.py  netconf.py  netconf_decorators.py  netconf_result.py  netmiko_compatability.py  response.py  result.py  session.py  settings.py  ssh_config.py  transport.py
scrapli/channel/: __init__.py  async_channel.py  base_channel.py  channel.py  sync_channel.py
scrapli/definition_options/: __init__.py  mikrotik_routeros.py
scrapli/definitions/: __init__.py  aethra_atosnt.yaml  alcatel_aos.yaml  arista_eos.yaml  aruba_aoscx.yaml  aruba_wlc.yaml  cisco_aireos.yaml  cisco_asa.yaml  cisco_cbs.yaml  cisco_ftd.yaml  cisco_iosxe.yaml  cisco_iosxr.yaml  cisco_nxos.yaml  cumulus_linux.yaml  cumulus_vtysh.yaml  datacom_dmos.yaml  datacom_dmswitch.yaml  default.yaml  dell_emc.yaml  dell_enterprisesonic.yaml  dlink_os.yaml  edgecore_ecs.yaml  eltex_esr.yaml  fortinet_fortios.yaml  fortinet_wlc.yaml  hp_comware.yaml  huawei_smartax.yaml  huawei_vrp.yaml  ipinfusion_ocnos.yaml  juniper_junos.yaml  mikrotik_routeros.yaml  nokia_srl.yaml  nokia_srlinux.yaml  nokia_sros.yaml  nokia_sros_classic.yaml  nokia_sros_classic_aram.yaml  paloalto_panos.yaml  raisecom_ros.yaml  ruckus_fastiron.yaml  ruckus_unleashed.yaml  (+6 more)
scrapli/driver/: __init__.py  async_driver.py  async_generic_driver.py  async_network_driver.py  base_driver.py  base_generic_driver.py  base_network_driver.py  driver.py  generic_driver.py  network_driver.py
scrapli/lib/: README.md  __init__.py
scrapli/transport/: __init__.py  async_transport.py  asynctelnet.py  base_transport.py  cssh2.py  miko.py  ptyprocess.py  socket.py  systemssh.py  telnet.py  transport.py
search/: search_index.json
tests/: conftest.py  devices.py  helper.py  mock_server_collect.py  prepare_devices.py  start_ssh_server.py  stream_log_ssh.py
tests/functional/: conftest.py  expected.py  prepare_devices.py  test_arista_eos.py  test_cisco_iosxe.py  test_cisco_iosxr.py  test_cisco_nxos.py  test_cli.py  test_drivers.py  test_drivers_functional.py  test_drivers_network.py  test_eos.py  (+7 more)
util/: build_wheels.sh  highlight_versions.sh  makefile-doc.awk  prepare_release.sh  update_all.sh  update_libscrapli_tag.sh  update_scrapli_definitions.sh  update_scrapli_version.sh
(+869 files in other folders)
