[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "wheel",
]

[project]
name = "scrapli"
description = "Fast, flexible, sync/async, Python 3.9+ screen scraping client specifically for network devices"
readme = "README.md"
keywords = [
  "netconf",
  "network",
  "ssh",
  "telnet",
  "async",
]
license = { file = "LICENSE" }
authors = [
    { name = "Carl Montanari", email = "carl.r.montanari@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = [
  "dependencies",
  "optional-dependencies",
  "version",
]
[project.urls]
Changelog = "https://carlmontanari.github.io/scrapli/changelog"
Docs = "https://carlmontanari.github.io/scrapli/"
Homepage = "https://github.com/carlmontanari/scrapli"

[tool.setuptools.dynamic]
version = { attr = "scrapli.__version__" }
dependencies = { file = "requirements.txt" }
optional-dependencies.dev = { file = [
    "requirements-dev.txt",
] }

[tool.setuptools.package-data]
scrapli = [
    "py.typed"
]

[tool.black]
line-length = 100
target-version = [
    "py313",
]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.13"
pretty = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = true

[tool.pylint.'MAIN']
ignore-paths = ".private/*,private/*,tests/*,venv/*"
disable="duplicate-code"

[tool.pylint.'FORMAT']
max-line-length = 100
max-module-lines = 1000